修改文件缓存位置，防止被清理；

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,4 +15,8 @@
       android:id="@+id/action_config2"
       android:title="des3密钥切换2"
       app:showAsAction="never"/>
+  <item
+      android:id="@+id/action_config3"
+      android:title="切换缓存地址"
+      app:showAsAction="never"/>
 </menu>
